update packaging info

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = district09-django-qr-toolkit-models
+name = django-qr-toolkit-core
 version = 0.1
 description = A Django app use qr-toolkit models
 long_description = file: README.md
@@ -9,7 +9,6 @@ author_email = jef.willems@district09.gent
 classifiers =
     Environment :: Web Environment
     Framework :: Django
-    Framework :: Django :: 3.0.11
     Intended Audience :: Developers
     Operating System :: OS Independent
     Programming Language :: Python
