--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
-include README.rst
+include README.md
+recursive-include qrtoolkit_core/static *
 recursive-include qrtoolkit_core/templates *
 recursive-exclude * *.py[co]
+recursive-exclude django_qr_toolkit_models *
+
