--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = django-qr-toolkit-core
 version = 2.5
-description = A Django app use qr-toolkit models
+description = A Django app to use qr-toolkit models
 long_description = file: README.md
-url = https://github.com/digipolisgent/django_service_qr-toolkit-api
+url = https://github.com/lab9k/qrtoolkit-core
 author = Willems Jef
 author_email = jef.willems@district09.gent
 classifiers =
