--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
 name = django-qr-toolkit-core
-version = 2.6
+version = 2.7
 description = A Django app to use qr-toolkit models
 long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/lab9k/qrtoolkit-core
 author = Willems Jef
 author_email = jef.willems@district09.gent
@@ -21,3 +22,11 @@ classifiers =
 [options]
 include_package_data = true
 packages = find:
+install_requires =
+    Django ==3.0.11
+    djangorestframework ==3.12.2
+    django-filter ==2.4.0
+    bleach ==3.2.2
+    segno ==1.3.3
+    requests ==2.25.1
+    django-reversion ==3.0.9
